--- a/Objects/micro.build_log.htm
+++ b/Objects/micro.build_log.htm
@@ -23,8 +23,9 @@ Project File Date:  05/16/2016
 
 <h2>Output:</h2>
 Build target 'Target 1'
+assembling main.a51...
 linking...
-Program Size: data=8.0 xdata=0 code=114
+Program Size: data=8.0 xdata=0 code=113
 creating hex file from ".\Objects\micro"...
 ".\Objects\micro" - 0 Error(s), 0 Warning(s).
 </pre>
